# qsorbit

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/qsorbit/: __init__.py  __main__.py
src/qsorbit/core/rotor/: __init__.py  exceptions.py  serial_port.py
tests/unit/: test_smoke.py
tests/unit/rotor/: test_serial_port.py
